k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: snmp-trap-sender-service
spec:
  selector:
    app: snmp-trap-sender
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8002
  type: LoadBalancer  # You can use 'NodePort' or 'ClusterIP' based on your needs
